--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="" placeholder="Имя" required />
+                        <input class="form__input" type="text" name="name" pattern="/([А-Я][а-я]{1,}(\-|\ )[А-Я][а-я]{1,})|(^[А-Я][а-я]{1,})/gm" minlength="2" maxlength="20" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="name" pattern="" placeholder="E-Mail" />
+                        <input class="form__input" type="email" name="name" pattern="/\w{1,}(\-)?\w{1,}\@[a-z]{1,}\.[a-z]{1,5}/gim" placeholder="E-Mail" />
                         <span class="form__error">e-mail в формате: sega@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="tel" name="name" placeholder="Телефон" pattern="" minlength="" maxlength="" />
+                        <input class="form__input" type="tel" name="name" placeholder="Телефон" pattern="/(\+7\(\d{3}\)\d{3}\-\d{2}\-\d{2})|(\+7\(\d{3}\) \d{3}\-\d{2}\-\d{2})|(\+7 \d{3}\-\d{3}\-\d{2}\-\d{2})|(\+7\d{10})|(8\d{10})|(\+7 \(\d{3}\) \d{3}\-\d{2}\-\d{2})/gm" minlength="" maxlength="" />
                         <span class="form__error">телефон в формате: +7 (123) 456-78-90</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="name" pattern="" placeholder="Ваш сайт" />
+                        <input class="form__input" type="url" name="name" pattern="/(http\:\/\/|https\:\/\/)(www\.)?((\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})|([a-z1-9]{1,20}\.[a-z]{1,5}))(\:\d{2,5})?(\/[a-z1-9\/]{1,}(\#)?)?/gim" placeholder="Ваш сайт" />
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
