--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <input class="form__input name" type="text" name="name" pattern="[А-ЯЁ][а-яё]+([\-]|[\s])[А-ЯЁ][а-яё]+|^[А-ЯЁ][а-яё]+" minlength="2" maxlength="20" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="name" pattern="[A-Za-z1-9_-]+@[a-z_]{1,}\.[a-z]{1,5}" placeholder="E-Mail" />
+                        <input class="form__input" type="email" name="name" pattern="[A-Za-z1-9_-]+@[a-zA-Z1-9-]+\.[a-z]{1,5}" placeholder="E-Mail" />
                         <span class="form__error">e-mail в формате: sega@yandex.ru</span>
                     </div>
                     <div class="form__field">
